update application files

--- a/semi/test/test_math.tex
+++ b/semi/test/test_math.tex
@@ -38,6 +38,14 @@
         \[\text{$U$ is open in $B$} \implies \text{$f^{-1}(U)$ is open in $A$.} \]
     \end{definition}
 
+$$ 
+\mathbf{J} = \begin{bmatrix}
+\frac{\partial y_1}{\partial x_1} & \cdots & \frac{\partial y_1}{\partial x_n} \\
+\vdots & \ddots & \vdots \\
+\frac{\partial y_m}{\partial x_1} & \cdots & \frac{\partial y_m}{\partial x_n}
+\end{bmatrix} 
+$$
+
     \begin{exercise}
         \label{exercise:continuityEpsilonDelta}
         Let $A\subseteq\mathbf R$. Show that $f\colon A\to\mathbf R$ is continuous in the sense of \cref{def:continuity} if and only if for all $a\in A$,  
